@@ -15,3 +15,10 @@
 <h2>Update cursor value at Frequency Response test run</h2>
 <p>For tracking changed values, update the mouse cursor display after a test runs. It was requiring a mouse move to update the displayed value.</p>
 
+<h2>Add a Residual waveform display to the Scope test</h2>
+<p>Per user requests, this adds the ability to show the residual time series (data - fundamental) to the plot. It will show in the &quot;Get&quot; list on the left
+    where either channel can be shown or hidden and colors may be manually set. This waveform is (currently) based on the series data minus any
+    spectral data within half an octave of the calculated fundamental.
+</p>
+
+
