@@ -12,6 +12,7 @@ namespace QA40xPlot.Views
 			InitializeComponent();
 			var vm = ViewModels.ViewSettings.Singleton.ScopeVm;
 			this.DataContext = vm;
+			LegendWindow.SetDataContext(vm);
 			vm.SetAction(this.WpfPlot1, this.Info1, this.Info2, this.TAbout);
 		}
 	}
