@@ -1,41 +1,0 @@
-﻿<Window x:Class="QA40xPlot.Views.ResidualsWnd"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
-             xmlns:local="clr-namespace:QA40xPlot"
-             xmlns:views ="clr-namespace:QA40xPlot.Views"
-             mc:Ignorable="d" 
-             Title="Residual Display"
-             Height="530"  d:DesignHeight="450" d:DesignWidth="800" Background="{Binding ThemeBackground}">
-    <!--this is currently not used but left behind just in case we want to show residuals in their own window-->
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-    <Grid Grid.Row="0" Grid.Column="1">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="_Number of harmonics: "
-               Target="{Binding ElementName=cbHarms, Path=ValueTextBox}" />
-         <views:UpDownControl x:Name="cbHarms"  VerticalAlignment="Center" 
-               Value="{Binding NumHarmonics}" Minimum="1" Maximum="10" Grid.Column="1" Grid.Row="0"  />
-    </Grid>
-        <ScottPlot:WpfPlot x:Name="ResidualPlot" Margin="5,10,5,5" MinHeight="200" MinWidth="200"
-                           Grid.Row="1" Grid.Column="0" 
-                           VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
-    </Grid>
-</Window>
