@@ -6,6 +6,7 @@ v 1.2.5 asdfasdf
 - add space to run/start/get... buttons
 - update mouse cursor in frequency response test when test runs
 - add WhatsNew file to the delivery
+- add a Residual display option to the Scope test
 v 1.2.4 1/13/2026
 - fixup selection of Transparent in color picker
 - improve gain curve frequency selection
